# plain-tickets

./: CLAUDE.md  CONTEXT.md  Cargo.toml  README.md
docs/: coding-style.md  prd-config-file.md  project.md
docs/adr/: 0001-git-shell-out-over-git2.md  0002-ratatui-for-tui.md
src/: application_types.rs  commands.rs  config.rs  domain_types.rs  git.rs  graph.rs  main.rs  types.rs
src/tui/: app.rs  mod.rs  render.rs
tests/: cli_archive.rs  cli_autocommit.rs  cli_config.rs  cli_dir.rs  cli_edit.rs  cli_graph.rs  cli_init.rs  cli_list.rs  cli_new.rs  cli_new_config.rs  cli_show.rs  cli_validation.rs
tests/common/: mod.rs
tickets/: .tickets.toml
tickets/all/: 00ruhc_tui-move-ticket-between-columns.md  04HRDu_auto-commit-hard-error-if-no-git.md  1ZFFGN_config-file-init-creates-tickets-toml.md  3If2VH_auto-commit-commit-on-tickets-new.md  3kvus7_allow-configuring-default-status-and-type-for-new-tickets.md  63gjvr_ascii-tree-renderer-for-dependency-graph.md  9y20si_tui-reads-kanban-columns-from-config.md  Av8rn7_auto-commit-git-shell-out-on-new-and-edit.md  EoNYIL_archive-all-rejected-flag.md  GqTgRZ_tickets-list-read-and-print-all-tickets.md  K_VfeX_archive-by-id-list.md  Nn-ej4_tickets-search-fuzzy-search-across-title-tags-and-type.md  Ot4VZM_tickets-show-print-single-ticket-front-matter-and-body.md  bYaFJd_auto-commit-commit-on-tickets-edit.md  bgk1hv_tui-kanban-board-skeleton.md  cBjvbK_git-auto-commit-via-git2-across-new-and-edit.md  dswtzd_scroll-offset-lags-by-one-card-when-navigating-down.md  fwjmyh_tui-screen-corrupted-after-move-ticket.md  (+16 more)
(+21 files in other folders)
