[package]
name = "plain-tickets"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tickets"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
nanoid = "0.4"
