[package]
name = "plain-tickets"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tickets"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
nanoid = "0.4"
toml = "0.8"
anyhow = "1.0.102"
ratatui = "0.29"
crossterm = "0.28"
notify = "6"
arboard = "3"

[dev-dependencies]
toml = "0.8"
insta = "1"
